<resources>
    <string name="app_name">Eshraqh</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eshraka_app_description">إشراقة.. هي فكرة دعوية وضعت لك حُبًّا وحرصًا وفريقٌ اجتمع ليشدّ أزرك، ويأخذ بمجامع قلبك لطريقٍ ارتضاهُ لنا ربُّنا وأفنى رسولنا -صلى اللّٰه عليه وسلم- عُمره في نشره، وأحيا فينا رابط الأُخوة لئلا يتيه عنّا أخٌ إلا أمسكنا بكلتا يديه وأرجعناه لطريقنا، رغبةً وأملًا في أن نصل سويًّا للفردوس</string>
    <string name="welcome">أهلًا بك في إشراقة</string>
    <string name="next">متابعة</string>
    <string name="quran">القرآن</string>
    <string name="home_background_image">home background image</string>
    <string name="eshraka_logo_home_image">eshraka logo home image</string>
    <string name="quran_image">quran image</string>
    <string name="prayer">الصلاة</string>
    <string name="growth">تطوير الذات</string>
    <string name="azkar">الأذكار</string>
    <string name="saturday">السبت</string>
    <string name="score">0/4</string>
    <string name="sabah_azkar">أذكار الصباح</string>
    <string name="masaa_azkar">أذكار المساء</string>
    <string name="sleep_azkar">أذكار النوم</string>
    <string name="after_prayer_azkar">أذكار بعد الصلاة</string>
    <string name="hamd_wrd">ورد الحمد</string>
    <string name="tkber_wrd">ورد التكبير</string>
    <string name="tsbe7_wrd">ورد التسبيح</string>
    <string name="wrd_estghphar">ورد الاستغفار</string>
    <string name="eshraka_charchter_describtion">eshraka charchter</string>
    <string name="save_menu">save</string>
    <string name="end_of_week">نهاية الأسبوع</string>
    <string name="end_of_week_confirmation">هل ترغب في بداية أسبوع جديد وحفظ درجات هذا الأسبوع ؟</string>
    <string name="end_of_week_confirmation_female">هل ترغبين في بداية أسبوع جديد وحفظ درجات هذا الأسبوع ؟</string>
    <string name="back">رجوع</string>
    <string name="yes">نعم</string>
    <string name="first_week_prayer_message">أول أسبوع لك في جدول الصلاة أسأل الله أن يوفقك</string>
    <string name="first_week_quran_message">أول أسبوع لك في جدول القرآن أسأل الله أن يوفقك</string>
    <string name="first_week_azkar_message">أول أسبوع لك في جدول الأذكار أسأل الله أن يوفقك</string>
    <string name="frame_image_for_dialog_message">frame image for dialog message description</string>
    <string name="image_for_message_dialog_description">image for message dialog description</string>
    <string name="ask_god_for_success">أسأل الله التوفيق</string>
    <string name="success_message1_azkar">أبشر بطمأنينة القلب وانشراح الصدر، وحفظ الله لك من الهم والغم ومكائد الشيطان.</string>
    <string name="success_message2_azkar">بشرك الله بالجنة، وبقصور مشيدة وبساتين مزروعة، وبدوام صلة القلب بالله.</string>
    <string name="success_message3_azkar">شخص آخر كلامه قبل النوم ذكر، وأول ما يقوله بعد الاستيقاظ ذكر، هو حتمََا قلب موصول بالله ويحبهُ الله.</string>
    <string name="success_message4_azkar">أرى أن لسانك رطبٌ دائمًا بذكر الله، رزقك الله حبه وقربه والأنس به.</string>
    <string name="success_message1_azkar_female">أبشري بطمأنينة القلب وانشراح الصدر، وحفظ الله لك من الهم والغم ومكائد الشيطان.</string>
    <string name="success_message2_azkar_female">بشرك الله بالجنة، وبقصور مشيدة وبساتين مزروعة، وبدوام صلة القلب بالله.</string>
    <string name="success_message3_azkar_female">شخص آخر كلامه قبل النوم ذكر، وأول ما يقوله بعد الاستيقاظ ذكر، هو حتمََا قلب موصول بالله ويحبهُ الله.</string>
    <string name="success_message4_azkar_female">أرى أن لسانك رطبٌ دائمًا بذكر الله، رزقك الله حبه وقربه والأنس به.</string>
    <string name="medium_message1_azkar">بأذكارك تكسر شوكة الشيطان وتقمعه وتخرجه من حياتك، فهلا التزمت بها بشكل أفضل؟</string>
    <string name="medium_message2_azkar">أراك تقصّر فى أذكارك دبر كل صلاة، لا تتكاسل، إشراقة ستساعدك بالتذكير، جاهد ليبقى لسانك ذاكرًا لله دومًا.</string>
    <string name="medium_message3_azkar">أحاديثٌ كثيرة تخبرنا بفضائل عظيمة، كقراءة سورة الملك قبل النوم تخاصم عن صاحبها حتى تدخله الجنة، آية الكرسي تحميك من مكر الشياطين، فلا تهمل أذكار نومك، أنت بحاجة إليها دائمًا.</string>
    <string name="medium_message4_azkar">إن كان قلبك موصولٌ بالله  وروحك تأنس بالله، ولسانك دائمُ الذكر، أتخشى شيئًا من الدنيا؟! فلا تتكاسل عن أذكارك.</string>
    <string name="medium_message1_azkar_female">بأذكارك تكسرين شوكة الشيطان وتقمعينه وتخرجينه من حياتك، فهلا التزمت بها بشكل أفضل؟</string>
    <string name="medium_message2_azkar_female">أراك تقصّرين فى أذكارك دبر كل صلاة، لا تتكاسلي، إشراقة ستساعدك بالتذكير، جاهدي ليبقى لسانك ذاكرًا لله دومًا.</string>
    <string name="medium_message3_azkar_female">أحاديثٌ كثيرة تخبرنا بفضائل عظيمة، كقراءة سورة الملك قبل النوم تخاصم عن صاحبها حتى تدخله الجنة، آية الكرسي تحميك من مكر الشياطين، فلا تهملي أذكار نومك، أنت بحاجة إليها دائمًا.</string>
    <string name="medium_message4_azkar_female">إن كان قلبك موصولٌ بالله  وروحك تأنس بالله، ولسانك دائمُ الذكر، أتخشين شيئًا من الدنيا؟! فلا تتكاسلي عن أذكارك.</string>
    <string name="fail_message1_azkar">قال تعالى:(فَاذْكُرُونِي أَذْكُرْكُم)، تخيل! الله بعظمته يذكرك حين تذكره، فلا تهمل أذكارك.</string>
    <string name="fail_message2_azkar">وصانا النبي بمعقبات الصلاة، بشرنا في أحاديثه بالجنة، وبمغفرة الخطايا، أفلا يتعلق قلبك بها؟</string>
    <string name="fail_message3_azkar">عندما تذهب لفراشك لا تدري على أي حال ستصبح، فاجعل روحك محصنة بأذكار نومك.</string>
    <string name="fail_message4_azkar">مثل الذي يذكر الله والذي لا يذكر الله كمثل الحيّ والميت، فأحيي حب ربك وذكره في قلبك وعلى لسانك.</string>
    <string name="fail_message1_azkar_female">قال تعالى:(فَاذْكُرُونِي أَذْكُرْكُم)، تخيلي! الله بعظمته يذكرك حين تذكرينه، فلا تهملي أذكارك.</string>
    <string name="fail_message2_azkar_female">وصانا النبي بمعقبات الصلاة، بشرنا في أحاديثه بالجنة، وبمغفرة الخطايا، أفلا يتعلق قلبك بها؟</string>
    <string name="fail_message3_azkar_female">عندما تذهبين لفراشك لا تدرين على أي حال ستصبحين، فاجعلي روحك محصنة بأذكار نومك.</string>
    <string name="fail_message4_azkar_female">مثل الذي يذكر الله والذي لا يذكر الله كمثل الحيّ والميت، فأحيي حب ربك وذكره في قلبك وعلى لسانك.</string>
    <string name="success_message1_quran">جعلك الله من الذين يقال لهم:" اقرأ ورتل وارتقِ كما كنت تُرتل في الدنيا فإن منزلتك عندَ أخر آية كنت تقرؤها“.</string>
    <string name="success_message2_quran"> ما دمت تداوم على ورد مراجعتك فتيقن أن القرآن سيُحفظ في قلبك وعقلك حتى ترتل منه ما تشاء وقت ما تشاء.</string>
    <string name="success_message3_quran">أبشر، فقد قال رسولنا:"مثلُ المؤمنِ الذي يقرأ القرآنَ مثلُ الأترُجَّةِ. ريحُها طيِّبٌ وطعمُها طيِّبٌ".</string>
    <string name="success_message1_quran_female">جعلك الله من الذين يقال لهم:" اقرأ ورتل وارتقِ كما كنت تُرتل في الدنيا فإن منزلتك عندَ أخر آية كنت تقرؤها“.</string>
    <string name="success_message2_quran_female"> ما دمت تداومين على ورد مراجعتك فتيقني أن القرآن سيُحفظ في قلبك وعقلك حتى ترتلي منه ما تشائين وقت ما تشائين.</string>
    <string name="success_message3_quran_female">أبشري، فقد قال رسولنا:"مثلُ المؤمنِ الذي يقرأ القرآنَ مثلُ الأترُجَّةِ. ريحُها طيِّبٌ وطعمُها طيِّبٌ".</string>
    <string name="medium_message1_quran"> إذا ساومتك نفسك للتكاسل فذكرها أنك مسلم، والمسلم همته تناطح السماء في حفظ كتاب الله.</string>
    <string name="medium_message2_quran"> لعل تخبطك في الحفظ اختبارٌ لمدى تعلق قلبك بالقرآن، فاحذر أن تفتر همتك وتهمله فتنسى ما حفظت.</string>
    <string name="medium_message3_quran">شخص يتعاهد القرآن كل يوم ألا يرقّ قلبُه؟ ألا يزداد إيمانه؟ ألا يكون له نصيبٌ من محبة الله؟ فلمَ تتكاسل عن وردك؟</string>
    <string name="medium_message1_quran_female"> إذا ساومتك نفسك للتكاسل فذكريها أنك مسلمة، والمسلمة همتها تناطح السماء في حفظ كتاب الله.</string>
    <string name="medium_message2_quran_female"> لعل تخبطك في الحفظ اختبارٌ لمدى تعلق قلبك بالقرآن، فاحذري أن تفتر همتك وتهمليه فتنسي ما حفظت.</string>
    <string name="medium_message3_quran_female">شخص يتعاهد القرآن كل يوم ألا يرقّ قلبُه؟ ألا يزداد إيمانه؟ ألا يكون له نصيبٌ من محبة الله؟ فلمَ تتكاسلين عن وردك؟</string>
    <string name="fail_message1_quran">ألا تحب أن تنال الشرف والرفعة في الدنيا، والمكانة العالية في الجنة؟! فلمَ تتكاسل في حفظ القرآن!</string>
    <string name="fail_message2_quran">تعاهدوا هذا القرآن فوالذي نفس محمد بيده لهو أشد تفلتًا من الإبل في عُقُلها!</string>
    <string name="fail_message3_quran">عليكَ بتلاوةِ القرآنِ، فإنَّهُ نورٌ لكَ في الأرضِ، وذُخرٌ لكَ في السَّماء.</string>
    <string name="fail_message1_quran_female">ألا تحبين أن تنالي الشرف والرفعة في الدنيا، والمكانة العالية في الجنة؟! فلمَ تتكاسلين في حفظ القرآن!</string>
    <string name="fail_message2_quran_female">تعاهدوا هذا القرآن فوالذي نفس محمد بيده لهو أشد تفلتًا من الإبل في عُقُلها!</string>
    <string name="fail_message3_quran_female">عليكِ بتلاوةِ القرآنِ، فإنَّهُ نورٌ لكِ في الأرضِ، وذُخرٌ لكِ في السَّماء.</string>
    <string name="success_message1_prayer">أبشر، أسأل الله أن يجعل حفاظك على الصلاة نورًا وبرهانًا ونجاة من النار.</string>
    <string name="success_message2_prayer">أبشر، فالله يحبك، و عسی أن يبني لك بيتًا في الجنة كل يوم.</string>
    <string name="success_message3_prayer">كُلمَا حَرصتّ عَلى الصَلاة ، كُلمَا شَعرتّ أنَ الدُنيَا ازدَادتْ يُسراً !♥</string>
    <string name="success_message1_prayer_female">أبشري، أسأل الله أن يجعل حفاظك على الصلاة نورًا وبرهانًا ونجاة من النار.</string>
    <string name="success_message2_prayer_female">أبشري، فالله يحبك، و عسی أن يبني لك بيتًا في الجنة كل يوم.</string>
    <string name="success_message3_prayer_female">كُلمَا حَرصتِ عَلى الصَلاْة ، كُلمَا شَعرتِ أنَ الدُنيَا ازدَادتّْ يُسراً !♥</string>
    <string name="fail_message1_prayer"> لا بأس، جاهد مرة أخرى وإشراقة ستساعدك على الالتزام بالفروض.</string>
    <string name="fail_message2_prayer">النفس تتخبط بين ذنب واستقامة، فجاهد ألا تغلبك نفسك مرة أخرى، فصلاتك هي أول ما تحاسب عليه.</string>
    <string name="fail_message3_prayer">ما دمت في الصلاة فأنت تقرع باب الملك، ومن يقرع باب الملك يفتح له، ولا تدري كمَّ الخير الذي سينالك إن فتح لك الملك بابه، فأقبل!</string>
    <string name="fail_message1_prayer_female"> لا بأس، جاهدي مرة أخرى وإشراقة ستساعدك على الالتزام بالفروض.</string>
    <string name="fail_message2_prayer_female">النفس تتخبط بين ذنب واستقامة، فجاهدي ألا تغلبك نفسك مرة أخرى، فصلاتك هي أول ما تحاسبين عليه.</string>
    <string name="fail_message3_prayer_female">ما دمت في الصلاة فأنت تقرعين باب الملك، ومن يقرع باب الملك يفتح له، ولا تدرين كمَّ الخير الذي سينالك إن فتح لك الملك بابه، فأقبلي!</string>
    <string name="noo">لا</string>
    <string name="add_new_azkar_to_your_schedule">هل ترغب في حذف أو إضافة بعض البنود من جدولك ؟</string>
    <string name="add_new_azkar_to_your_schedule_female">هل ترغبين في حذف أو إضافة بعض البنود من جدولك ؟</string>
    <string name="choose_akar_to_add_message">اختر البنود التي تريد إضافتها أو حذفها</string>
    <string name="choose_akar_to_add_message_female">اختاري البنود التي تريدين إضافتها أو حذفها</string>
    <string name="save">حفظ</string>
    <string name="software_inversion">Software Inversion</string>
    <string name="logo_image_description">logo image description</string>
    <string name="username">اسم المستخدم</string>
    <string name="birthdate">تاريخ الميلاد</string>
    <string name="gander">الجنس</string>
    <string name="male">ذكر</string>
    <string name="female">أنثى</string>
    <string name="login">تسجيل</string>
    <string name="azkar_gheth_image_descriptiion">azkar gheth image description</string>
    <string name="share_menu">مشاركة</string>
    <string name="rate_menu">تقييم</string>
    <string name="review_menu">مقترحاتك</string>
    <string name="about_menu">عن المطور</string>
    <string name="about_app">عن التطبيق</string>
    <string name="sont_fagr">سنة الفجر</string>
    <string name="sont_keyam">سنة القيام</string>
    <string name="sont_maghreb">سنة المغرب</string>
    <string name="sont_esha">سنة العشاء</string>
    <string name="sont_zuhr">سنة الظهر</string>
    <string name="choose_sonn_text">اختر سنن تريد أدائها ؟</string>
    <string name="sont_doha">سنة الضحى</string>
    <string name="sont_wetr">سنة الوتر</string>
</resources>