<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_280sdp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_280sdp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/hamd_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:paddingLeft="@dimen/_36sdp"
                android:text="@string/hamd_wrd"
                android:textColor="@color/mediumGreen"
                android:textDirection="rtl"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_choose_zekr" />

            <CheckBox
                android:id="@+id/tkber_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_32sdp"
                android:text="@string/tkber_wrd"
                android:textColor="@color/mediumGreen"
                android:textDirection="rtl"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="@+id/hamd_check"
                app:layout_constraintTop_toBottomOf="@+id/hamd_check" />

            <CheckBox
                android:id="@+id/tsbeh_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_23sdp"
                android:text="@string/tsbe7_wrd"
                android:textColor="@color/mediumGreen"
                android:textDirection="rtl"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="@+id/tkber_check"
                app:layout_constraintTop_toBottomOf="@+id/tkber_check" />

            <CheckBox
                android:id="@+id/estghphar_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_15sdp"
                android:text="@string/wrd_estghphar"
                android:textColor="@color/mediumGreen"
                android:textDirection="rtl"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="@+id/tsbeh_check"
                app:layout_constraintTop_toBottomOf="@+id/tsbeh_check" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back_no_adding"
                tools:ignore="TextContrastCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:padding="@dimen/_6sdp"
                android:text="@string/back"
                android:textSize="@dimen/_18ssp"
                app:background="@color/green"
                app:cornerRadius="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_save" />

            <TextView
                android:id="@+id/txt_choose_zekr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/choose_akar_to_add_message"
                android:textColor="@color/mediumGreen"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:padding="@dimen/_6sdp"
                android:text="@string/save"
                android:textSize="@dimen/_18ssp"
                app:background="@color/green"
                app:cornerRadius="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TextContrastCheck">

            </com.google.android.material.button.MaterialButton>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>